[gd_scene load_steps=7 format=3 uid="uid://dqkepk8gbl7mr"]

[ext_resource type="Script" path="res://MainMenu/MainMenu.gd" id="1_xmcbp"]
[ext_resource type="AudioStream" uid="uid://cr01gxbp4ju4n" path="res://assets/MusicSoundMenu.mp3" id="2_o0vb4"]

[sub_resource type="LabelSettings" id="LabelSettings_dhh2v"]
font_size = 80

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i4crg"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.223529, 1, 0.0784314, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sn1nx"]
bg_color = Color(0.0100903, 0.0100903, 0.0100903, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.223529, 1, 0.0784314, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2fka"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.223529, 1, 0.0784314, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xmcbp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 714.0
color = Color(0.151278, 0.000273118, 0.27841, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 250.0
offset_right = 883.0
offset_bottom = 360.0
theme_override_constants/shadow_offset_x = 40
text = "Diego - Pong"
label_settings = SubResource("LabelSettings_dhh2v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BTNMNormal" type="Button" parent="."]
layout_mode = 0
offset_left = 515.0
offset_top = 380.0
offset_right = 815.0
offset_bottom = 460.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_i4crg")
text = "NORMAL"
icon_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_o0vb4")
volume_db = -8.0
autoplay = true

[node name="BTNMVelocidad" type="Button" parent="."]
layout_mode = 0
offset_left = 475.0
offset_top = 480.0
offset_right = 842.0
offset_bottom = 560.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_sn1nx")
text = "MODO VELOCIDAD
"

[node name="BTNMPelotaDoble" type="Button" parent="."]
layout_mode = 0
offset_left = 485.0
offset_top = 580.0
offset_right = 835.0
offset_bottom = 660.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_d2fka")
text = "MODO 2 PELOTAS"

[connection signal="pressed" from="BTNMNormal" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="BTNMVelocidad" to="." method="_on_btnm_velocidad_pressed"]
[connection signal="pressed" from="BTNMPelotaDoble" to="." method="_on_btnm_pelota_doble_pressed"]
